# nicer_bib

./: LICENSE  README.md  pyproject.toml  setup.py
src/: nicer_bib.py
