[build-system]
requires = ["hatchling", "pybtex", "clipboard"]
build-backend = "hatchling.build"

[project]
name = "nicer_bib"
version = "0.1"
authors = [
{name = "Rassul Bairamkulov", email="rassul.bairamkulov@epfl.ch"},
]
description = "A small utility for making BibTeX in your clipboard nicer."
readme = "README.md"
license = {file="LICENSE"}
equires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Markup :: LaTeX",
]

[project.urls]
"Homepage" = "https://github.com/brainkz/nicer_bib"
"Bug Tracker" = "https://github.com/brainkz/nicer_bib/issues"
